syntax = "proto3";

option go_package="GoldenCity/gin;GoldenCitygin";

import "base.proto";

message TProtoGoldenCityUserInfoReq
{
    string      token       = 1;
}

message TProtoGoldenCityUserInfoRsp
{
    TPlayerInfo             player_info = 1;
    TGoldenCityGameInfo     GoldenCity_info   = 2;
    TResult                 lastresult = 3;
}